# OS-Colloquium-1

./: CMakeLists.txt  Colloquium OS 1.cpp  Colloquium OS 1.h  README.md  delete_duplicates.cpp  delete_duplicates.h  fact.cpp  fact.h  my_list.h  reverse_list.cpp  reverse_list.h  test_delete_duplicates.cpp  test_delete_duplicates.h  test_fact.cpp  test_fact.h  test_reverse_list.cpp  test_reverse_list.h
